--- a/tiny/home.html
+++ b/tiny/home.html
@@ -3,5 +3,12 @@
 <body> 
 <img align="middle" src="godzilla.gif">
 Dave O'Hallaron
+<form action="/cgi-bin/adder" method="get">
+  <label for="n1">num 1:</label>
+  <input type="text" id="n1" name="n1"><br><br>
+  <label for="n2">num2 :</label>
+  <input type="text" id="n2" name="n2"><br><br>
+  <input type="submit" value="Submit">
+</form>
 </body>
 </html>
